change config path

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,10 +6,10 @@ spring:
     config:
       server:
         git:
-          uri: https://bitbucket.org/quockhanh2403/configs
+          uri: https://github.com/Quockhanh243/services-config.git
           search-paths: '{application}'
-          username: quockhanh2403
-          password: Dokhanh1@
+          username: quockhanh243
+          password: dokhanh1
           default-label: "master"
   zipkin:
     baseUrl: http://localhost:9411/
